mobile menu overflow hidden fix

--- a/src/index.css
+++ b/src/index.css
@@ -75,11 +75,19 @@
   }
 }
 
-body[data-scroll-locked] {
-  min-width: 100%;
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  width: 42x;
 }
 
-html,
-body {
-  overflow-x: hidden;
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  width: 4px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
